add_executable(FCGIServer
  Acceptor.cpp
  AcceptorBoostAsio.cpp
  BoostAsioContextRunActiveObject.cpp
  FCGIServer.cpp
  WorkerStatsObject.cpp
)

target_link_libraries(FCGIServer
  ActionFrontend
  AdFrontend
  AdInstFrontend
  AdServerCommonsXSD
  BidRateProvider
  BiddingFrontend
  CORBACommons
  CTRProvider
  CampaignConfig
  CampaignConfigSource
  CampaignIndex
  CampaignManagerIDL
  CampaignManagerLogger
  ClickFrontend
  Commons
  ContentFrontend
  CreativeTemplateArgs
  DirectoryModule
  FCGI
  FCGIServerConfigXSD
  Generics
  ImprTrackFrontend
  OptoutFrontend
  PassFrontend
  PassPixelFrontend
  ProcessControlVars
  PubPixelFrontend
  RequestMatchers
  SecToken
  UServerUtilsMetrics
  UserBindFrontend
  UserInfoClusterControlIDL
  UserInfoManagerControllerIDL
  UserInfoManagerControllerL
  UtilCommons
  WebStatFrontend
  XMLUtility
  boost_system
)