add_executable(FCGIServer
  Acceptor.cpp
  AcceptorBoostAsio.cpp
  BoostAsioContextRunActiveObject.cpp
  FCGIServer.cpp
  WorkerStatsObject.cpp
)

target_link_libraries(FCGIServer
  ActionFrontend
  AdFrontend
  AdInstFrontend
  AdServerCommonsXSD
  BidRateProvider
  BiddingFrontend
  CORBACommons
  CTRProvider
  CampaignConfig
  CampaignConfigSource
  CampaignIndex
  CampaignManagerIDL
  CampaignManagerLogger
  ClickFrontend
  Commons
  ContentFrontend
  CreativeTemplateArgs
  DirectoryModule
  EchoFrontend
  FCGI
  FCGIServerConfigXSD
  Generics
  GrpcCampaignManagerPool
  ImprTrackFrontend
  OptoutFrontend
  PassFrontend
  PassPixelFrontend
  ProcessControlVars
  PubPixelFrontend
  RequestMatchers
  SecToken
  UserBindFrontend
  UserInfoClusterControlIDL
  UserInfoManagerControllerIDL
  UserInfoManagerControllerL
  UtilCommons
  WebStatFrontend
  XMLUtility
  boost_system
)