ADD_SUBDIRECTORY(ActionFrontend)
ADD_SUBDIRECTORY(AdFrontend)
ADD_SUBDIRECTORY(AdFrontendGrpc)
ADD_SUBDIRECTORY(AdInstFrontend)
ADD_SUBDIRECTORY(BiddingFrontend)
ADD_SUBDIRECTORY(BiddingFrontendGrpc)
ADD_SUBDIRECTORY(ClickFrontend)
ADD_SUBDIRECTORY(ContentFrontend)
ADD_SUBDIRECTORY(DirectoryModule)
ADD_SUBDIRECTORY(EchoFrontend)
ADD_SUBDIRECTORY(ImprTrackFrontend)
ADD_SUBDIRECTORY(OptoutFrontend)
ADD_SUBDIRECTORY(PassFrontend)
ADD_SUBDIRECTORY(PassPixelFrontend)
ADD_SUBDIRECTORY(PubPixelFrontend)
ADD_SUBDIRECTORY(UserBindFrontend)
ADD_SUBDIRECTORY(WebStatFrontend)
